css selectors grouped and tidied

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,8 +79,7 @@ p {
     font-size: 16px;
 }
 
-.social-media-marketing 
-    .online-reputation-management, .search-engine-optimization   {
+.main-content   {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -89,11 +88,11 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
+.main-content img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2, .online-reputation-management h2, .social-media-marketing h2 {
+.main-content h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -110,18 +109,18 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost {
+.aside-benefits {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 
+.aside-benefits h3 
     {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-lead img, .benefit-brand img, .benefit-cost img 
+.aside-benefits img 
     {
     display: block;
     margin: 10px auto;
